--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@angular/platform-browser-dynamic": "~10.2.4",
     "@angular/router": "~10.2.4",
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
+    "@sweetalert2/ngx-sweetalert2": "^9.0.0",
     "bootstrap": "^4.6.1",
+    "ngx-ui-loader": "^10.0.0",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.4.17",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
